--- a/common/pom.xml
+++ b/common/pom.xml
@@ -119,7 +119,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.gentics.mesh</groupId>
-			<artifactId>mesh-test-api</artifactId>
+			<artifactId>mesh-tests-api</artifactId>
 			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
